[package]
name = "preslae_arch_rust"
version = "0.1.0"
authors = ["Ferou, Asphoritian@gmail.com"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } // For asynchronous programming
tonic = "0.7" // For gRPC (replace with Thrift library if using Thrift)
serde = { version = "1", features = ["derive"] } // For serialization/deserialization
serde_json = "1" // For JSON serialization/deserialization

[build-dependencies]
tonic-build = "0.7" // For gRPC code generation (replace with Thrift tool if using Thrift)

[lib]
path = "src/lib.rs" # Optional if you have a separate library crate

[[bin]]
name = "preslae_arch_server"
path = "src/main.rs"
